Add Debug Logging for CrownConstruction