@@ -194,9 +194,9 @@ public final class Rook<PLACE, LETTER> {
 	 */
 	public Rook<PLACE, LETTER> ratification(final CoRook<PLACE, LETTER> coRook) {
 		final Kingdom<PLACE, LETTER> kingdom = new Kingdom<>(ImmutableSet.of(coRook.getCoKingdom().getPosKingdom()));
-		final KingdomLaw<PLACE, LETTER> law = new KingdomLaw<>(ImmutableSet.singleton(coRook.getCondition()));
-		// final KingdomLaw<PLACE, LETTER> law = new KingdomLaw<>(
-		// DataStructureUtils.union(coRook.getRook().getLaw().getConditions(), Set.of(coRook.getCondition())));
+		final Set<Condition<LETTER, PLACE>> lawConditions =
+				DataStructureUtils.union(coRook.getRook().getLaw().getConditions(), Set.of(coRook.getCondition()));
+		final KingdomLaw<PLACE, LETTER> law = new KingdomLaw<>(ImmutableSet.of(lawConditions));
 		return new Rook<>(kingdom, law);
 	}
 
